<resources>
    <string name="app_name" translatable="false">dicoding bpaa</string>
    <string name="title_app">Story App</string>
    <string name="version_app">Version 1.0</string>
    <string name="subtitle_app">Share memories with stories</string>
    <string name="please_insert_field">Please insert field</string>
    <string name="enter_six_char">Minimum length six char</string>
    <string name="insert_pass">Insert password</string>
    <string name="insert_email">Insert Email</string>
    <string name="login">Login</string>
    <string name="dont_have_account">Dont have account, create</string>
    <string name="here">Here</string>
    <string name="invalid_email">Invalid email address</string>
    <string name="already_have_account">Already have account, login</string>
    <string name="insert_username">Insert username</string>
    <string name="register">Register</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="exit_press_back_twice_message">Enter twice to exit application</string>
    <string name="something_error">Something error</string>

    <string name="token_format" translatable="false">Bearer %1$s</string>
    <string name="post_by_format" translatable="false">Post by %1$s</string>
    <string name="loading_msg">Loading..</string>
    <string name="title_favorite">Favorite</string>
    <string name="logout">Logout</string>
    <string name="logout_descreption">Are you sure logout account ??</string>
    <string name="minim_six_char">Minimum six char</string>
    <string name="dark_mode">Dark Theme</string>
    <string name="language">Language</string>
    <string name="copyright_summary">Copyright &#169; 2022 budiliauw87</string>
    <string name="dark_mode_summary">Setup theme dark mode</string>
    <string name="language_summary">Setup language application</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="insert_descreption">Insert descreption</string>
    <string name="submit">Submit</string>
    <string name="title_detail">Detail</string>
    <string name="title_post">Posting</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_posting">Are you sure cancel post</string>
    <string name="refresh">Refresh</string>
    <string name="empty_favorite">Empty Favorite</string>
    <string name="no_cordinate_location">no cordinate location</string>
    <string name="permission_required">Permission required for access this feature</string>
    <string name="try_again">Try again</string>
    <string name="add_from_camera">Add from camera</string>
    <string name="add_from_gallery">Add from gallery</string>
    <string name="by_guest">By Guest</string>
    <string name="please_insert_photo">Please insert photo</string>
    <string name="photo_story">Story Photo</string>
    <string name="title_map">Map</string>
    <string name="permission_location_title">Location permission is needed for core functionality</string>
    <string name="add_location">Add location</string>
    <string name="stop_request">Stop request</string>

    <string-array name="pref_theme_list_titles">
        <item>Light</item>
        <item>Dark</item>
        <item>Auto</item>
    </string-array>

    <string-array name="pref_theme_list_values">
        <item>light</item>
        <item>dark</item>
        <item>default</item>
    </string-array>

    <string-array name="pref_lang_list_titles">
        <item>English</item>
        <item>Indonesian</item>
    </string-array>

    <string-array name="pref_lang_list_values">
        <item>en</item>
        <item>id</item>
    </string-array>

</resources>