<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            app:title="@string/title_detail" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="24dp"
        android:paddingBottom="@dimen/activity_horizontal_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.liaudev.dicodingbpaa.customs.RoundTextView
            android:id="@+id/tvRoundName"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:gravity="center"
            android:transitionName="logo_name"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:rtvBackground="@color/purple_500"
            app:rtvIsCircle="true"
            app:rtvText="m"
            app:rtvTextColor="@android:color/white"
            app:rtvTextSize="18sp" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:transitionName="username"
            app:layout_constraintBottom_toTopOf="@+id/tvCreatedAt"
            app:layout_constraintLeft_toRightOf="@+id/tvRoundName"
            app:layout_constraintTop_toTopOf="@+id/tvRoundName"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="Your username" />


        <TextView
            android:id="@+id/tvCreatedAt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:transitionName="createdAt"
            app:layout_constraintBottom_toBottomOf="@+id/tvRoundName"
            app:layout_constraintLeft_toRightOf="@+id/tvRoundName"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            tools:text="Created" />

        <ImageButton
            android:id="@+id/imgLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="@null"
            android:transitionName="imgLocation"
            app:layout_constraintBottom_toBottomOf="@+id/tvRoundName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvRoundName"
            app:srcCompat="@drawable/ic_baseline_location_on_24"
            app:tint="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/tvDescreption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline"
            android:transitionName="descreption"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRoundName"
            tools:text="@tools:sample/lorem/random" />


        <ImageView
            android:contentDescription="@string/photo_story"
            android:id="@+id/imgPhoto"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:transitionName="photourl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDescreption"
            tools:src="@tools:sample/backgrounds/scenic" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnShare"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/share"
            android:textAlignment="center"
            app:icon="@drawable/ic_baseline_share_24"
            app:iconGravity="textStart"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/btnFavorite"
            app:layout_constraintTop_toBottomOf="@+id/imgPhoto" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFavorite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/title_favorite"
            app:icon="@drawable/ic_baseline_favorite_24"
            app:iconGravity="textStart"
            app:layout_constraintLeft_toRightOf="@+id/btnShare"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgPhoto" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>


